# galay-mcp

./: .gitignore  CHANGELOG.md  CMakeLists.txt  README.md  galay-mcp-config.cmake.in
.claude/skills/C++代码规范/: SKILL.md
benchmark/: B1-StdioPerformance.cc  B2-HttpPerformance.cc  B3-ConcurrentRequests.cc  B3-concurrent_requests.cc  CMakeLists.txt
build-docverify/: CMakeCache.txt  Makefile  cmake_install.cmake  galay-mcp-config.cmake
build-docverify/benchmark/: Makefile  cmake_install.cmake
build-docverify/examples/: Makefile  cmake_install.cmake
build-docverify/galay-mcp/: Makefile  cmake_install.cmake
build-docverify/test/: Makefile  cmake_install.cmake
cmake/: option.cmake
docs/: 00-快速开始.md  02-API参考.md  03-使用指南.md  04-性能测试.md  04-示例代码.md  05-性能测试.md  06-高级主题.md  07-常见问题.md  1-McpSchemaBuilder使用指南.md  1-标准输入输出MCP测试.md  2-性能优化建议.md  3-性能优化总结.md  B1-Stdio性能测试.md  B2-HTTP性能测试.md  B3-并发请求压测.md  T1-标准输入输出MCP测试.md  T3-HTTP客户端测试.md  T4-HTTP服务器测试.md  代码规范化改进总结.md
example/: CMakeLists.txt  E1-BasicStdioUsage.cc  E2-BasicHttpUsage.cc
examples/: CMakeLists.txt
examples/common/: E2-BasicHttpUsageMain.inc
galay-mcp/: CMakeLists.txt
galay-mcp/client/: McpHttpClient.cc  McpHttpClient.h  McpStdioClient.cc  McpStdioClient.h
galay-mcp/common/: McpBase.cc  McpBase.h  McpError.cc  McpError.h  McpProtocolUtils.h  McpSchemaBuilder.h
galay-mcp/module/: ModulePrelude.hpp  galay.mcp.cppm
galay-mcp/server/: McpHttpServer.cc  McpHttpServer.h  McpStdioServer.cc  McpStdioServer.h
scripts/: S2-Run.sh  S3-RunBenchmarks.sh  S4-RunIntegrationTest.sh  check.sh  run.sh
test/: CMakeLists.txt  T1-StdioClient.cc  T3-HttpClient.cc  T3-http_client.cc  T4-HttpServer.cc  test_stdio_server.cc
todo/: benchmark-tasks.md  current-tasks.md
